fix: change slider because swipe did not work on mobile

--- a/src/components/ProjectSlider/projectSlider.scss
+++ b/src/components/ProjectSlider/projectSlider.scss
@@ -1,16 +1,16 @@
 .slider-project {
-	.slick-slide {
+	.swiper-slide {
 		opacity: 0.6;
 		transform: scale(0.95);
 		transition: 0.3s;
 
-		&.slick-center {
+		&.swiper-slide-active {
 			position: relative;
 			opacity: 1;
 			transform: scale(1);
 			z-index: 1;
 
-			.box {
+			&.box {
 				.description {
 					display: block;
 					width: 300px;
@@ -55,7 +55,7 @@
 	.box {
 		background-color: var(--color-1);
 		width: 250px;
-		height: 545px;
+		height: 400px;
 		border-radius: 1.6rem;
 		box-shadow: rgba(0, 0, 0, 0.5) 0 4px 24px;
 		display: flex !important;
@@ -89,6 +89,17 @@
 				font-size: 2rem;
 				font-weight: var(--font-light);
 				line-height: 2.4rem;
+			}
+		}
+
+		picture {
+			display: block;
+			width: 100%;
+			height: 100%;
+
+			.image {
+				// width: 100%;
+				height: 100%;
 			}
 		}
 	}
